Fixed weird letter spacing in "Our Vision"

--- a/css/style.css
+++ b/css/style.css
@@ -345,7 +345,7 @@ h6 {
     font-weight: normal;
     margin-bottom: 20px;
     margin-top: 0;
-    letter-spacing: -0.2px;
+    letter-spacing: 0px !important;
 }
 
 h1 a,
